--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
 
 
 <body>  
-<h1>Welcome</h1>
-<h2>Daniel Soro</h2>
+<h1>Hi, I'm Daniel Soro </h1>
+<h2>Web / UI Designer</h2>
+
+<p>I created this website to showcase some of my recent web design work.</p>
+
 
 <h3>Sample Web Pages</h3>
 
 <p><a href="exercises/page-1.html">A Tale of Two Cities</a></p>
 <p><a href="exercises/page-2.html">Purple Rain</a></p>
+<p><a href="exercises/page-3.html">Web Page with Sections</a></p>
 
 </body>
 </html> 
