--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Soro | Home Page</title> 
     <meta name="description" content="Welcome to my website that
     showcases some of my digital creations.">
+<link rel="stylesheet" href="assets/css/global.css .css">
 
 
 
-</head>
+</head> 
 
 
 <body>  
