--- a/page-2.html
+++ b/page-2.html
@@ -7,6 +7,8 @@
     <title>Purple Rain</title>
     <title>When Doves Cry</title>
     <meta name="description" content="A basic web page containing some text from Wikipedia about the 1983-recorded song Purple Rain by Prince">
+    <link rel="stylesheet" href="assets/css/style-2.css .css">
+
 </head>
 
 <body>
@@ -31,4 +33,4 @@
 <p><a href="../index.html">Back to Home page</a></p>
 
 <body>
-</html> 
+<html></html>
