--- a/websites/index.html
+++ b/websites/index.html
@@ -6,7 +6,7 @@
     <title>Daniel Soro | Home Page</title> 
     <meta name="description" content="Welcome to my website that
     showcases some of my digital creations.">
-<link rel="stylesheet" href="assets/css/global.css .css">
+<link rel="stylesheet" href="assets/css/global.css">
 
 
 
