--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     showcases some of my digital creations.">
 <link rel="stylesheet" href="assets/css/global.css">
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PSQLRZM121"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-PSQLRZM121');
+</script>
 
 </head> 
 
