--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 <p><a href="exercises/page-5.html">Irish Tourism</a></p> 
 <p><a href="exercises/page-6.html">Smoothies</a></p> 
 <p><a href="exercises/page-7.html">Software Analytics</a></p> 
-
+<p><a href="portfolio/fashion/index.html">Fashion Projects</a></p> 
 </body>
 </html> 
