--- a/contacts/index (1).html
+++ b/contacts/index (1).html
@@ -7,6 +7,12 @@
     <title>Daniel Soro| Contact Page</title>
     <meta name="description" content="Connect with us effortlessly. Your questions, our priority. Reach out today!"> 
 
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon-16x16.png">
+    <link rel="manifest" href="../assets/img/site.webmanifest">
+
 	<!-- Preload large image -->
 
 	<!-- Stylesheets -->
@@ -16,7 +22,8 @@
 	<!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Playfair+Display:wght@400;700&family=Quicksand&family=Roboto:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap">
 
     <!-- Font Awesome 6 icons. Delete if not using. -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -30,7 +37,7 @@
     <!-- menu and 'hero block' header -->
     <nav class="theme-dark"><div class="container-menu">
         <a href="../index.html" class="brand">
-            <img src="../assets/img/website-logo-sample.png" alt="Sample website logo"></a>
+            <img src="../assets/img/logo.png" alt="Sample website logo"></a>
         
         <div class="container-menu-links">
         
@@ -39,7 +46,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../portfolio/index.html">Portfolio</a></li>
                 <li><a href="../store/index.html">Store</a></li>
-                <li><a class='btn btn-solid btn-soft' href="contacts/index (1).html" id='btn-cta'><span>Contact</span> <i class="fa-regular fa-envelope"></i></a></li>
+                <li><a class='btn btn-solid btn-soft' href="../contacts/index (1).html" id='btn-cta'><span>Contact</span> <i class="fa-regular fa-envelope"></i></a></li>
             </ul>
             </div>
         </div>
@@ -112,7 +119,8 @@
 
         <div class="col-3">
             <a href="#" class="brand">
-                <img src="https://lunevedy.com/ui/assets/img/website-logo-sample.png" alt="Sample website logo" style="width: 200px; height: 40px">
+                <img src="../assets/img/logo.png"
+                 alt="Sample website logo" style="width: 200px; height: 40px">
             </a>
 
             <h2>ABC Limited</h2>
