--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Soro| Web Designer </title>
     <meta name="description" content="Transforming ideas into impactful digital campaigns that spotlight products, services, and events.">
+    <!-- favicon -->
+
+   <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+   <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png">
+   <link rel="manifest" href="assets/img/site.webmanifest">
 
 	<!-- Preload large image -->
     <link rel="preload" href="assets/img/hero-image.jpg" as="image">
@@ -53,7 +59,7 @@
     <!-- menu and 'hero block' header -->
     <nav class="theme-dark"><div class="container-menu">
         <a href="#" class="brand">
-            <img src="assets/img/website-logo-sample.png" alt="Sample website logo">
+            <img src="assets/img/logo.png" alt=" website logo">
         </a>
     
         <div class="container-menu-links">
@@ -168,7 +174,7 @@
 
 			<div class="col-3">
                 <a href="#" class="brand">
-                    <img src="https://lunevedy.com/ui/assets/img/website-logo-sample.png" alt="Sample website logo" style="width: 200px; height: 40px">
+                    <img src="assets/img/logo.png" alt="Sample website logo" style="width: 200px; height: 40px">
                 </a>
 
                 <h2>ABC Limited</h2>
