--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Soro| Selected Portfolio</title>
     <meta name="description" content="Explore my creative journey. A showcase of passion, skills, and unique perspectives. Welcome to my portfolio.">
+	<!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon-16x16.png">
+    <link rel="manifest" href="../assets/img/site.webmanifest"">
 
 	<!-- Preload large image -->
 
@@ -32,7 +37,7 @@
     <!-- menu and 'hero block' header -->
     <nav class="theme-dark"><div class="container-menu">
         <a class= 'brand' href="../index.html">
-            <img src="../assets/img/website-logo-sample.png" alt="Sample website logo"></a>
+            <img src="../assets/img/logo.png" alt="Sample website logo"></a>
         
         <div class="container-menu-links">
         
@@ -138,7 +143,8 @@
 
 		<div class="col-3">
 			<a href="#" class="brand">
-				<img src="https://lunevedy.com/ui/assets/img/website-logo-sample.png" alt="Sample website logo" style="width: 200px; height: 40px">
+				<img src="../assets/img/logo.png"
+				 alt="Sample website logo" style="width: 200px; height: 40px">
 			</a>
 
 			<h2>ABC Limited</h2>
