--- a/store/index.html
+++ b/store/index.html
@@ -7,11 +7,21 @@
     <title>Store | Daniel Soro</title>
     <meta name="description" content="A selection of hand-picked quality books from Amazon to enhance your web design, web development, and digital business skills.">
 
+	<!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon-16x16.png">
+    <link rel="manifest" href="../assets/img/site.webmanifest">
+
 	<!-- Stylesheets -->
     <link rel="stylesheet" href="https://lunevedy.com/assets/2.0/css/lunevedy.min.css" />
     <link rel="stylesheet" href="../assets/css/custom.css" />
 
 	<!-- Google Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Playfair+Display:wght@400;700&family=Quicksand&family=Roboto:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap">
 
     <!-- Font Awesome 6 icons for buttons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -53,7 +63,7 @@
     <!-- navbar start here -->
     <nav class="theme-dark"><div class="container-menu">
         <a href="../index.html" class="brand">
-            <img src="../assets/img/website-logo-sample.png" alt="Sample website logo"></a>
+            <img src="../assets/img/logo.png" alt="Sample website logo"></a>
         
         <div class="container-menu-links">
         
@@ -91,8 +101,8 @@
 				<figure>
 					<a href="https://www.amazon.co.uk/dp/1925836363"><img src="assets/img/beautiful-web-design.png .png"  alt="The Principles of Beautiful Web Design: Jason Beaird & Alex Walker"></a>
 				</figure>
-				<h3>The Principles of Beautiful Web Design</h3>
-				<p>Jason Beaird &amp; Alex Walker</p>
+				<h3 style="color: gold;">The Principles of Beautiful Web Design</h3>
+				<p class="author"><span> Jason Beaird &amp; Alex Walker </span></p>
 				<a href="https://www.amazon.co.uk/dp/1925836363/ref=nosim?tag=danisoro2001-21" class="btn btn-solid btn-pill"><span>Buy now</span><i class="fas fa-shopping-cart"></i></a>
 			</div>
 
@@ -100,8 +110,8 @@
 				<figure>
 					<a href="https://www.amazon.co.uk/dp/1849693188"><img src="assets/img/responsive-web-design-frain.jpg" alt="Responsive Web Design with HTML5 and CSS3: Ben Frain"></a>
 				</figure>
-				<h3>Responsive Web Design with HTML5 and CSS3</h3>
-				<p>Ben Frain</p>
+				<h3 style="color: gold;"> Responsive Web Design with HTML5 and CSS3</h3>
+				<p class="author"> <span>Ben Frain</span></p>
 				<a href="https://www.amazon.co.uk/dp/1849693188/ref=nosim?tag=danisoro2001-21" class="btn btn-solid btn-pill"><span>Buy now</span><i class="fas fa-shopping-cart"></i></a>
 			</div>
 
@@ -109,8 +119,8 @@
 				<figure>
 					<a href="https://www.amazon.co.uk/dp/0648053709"><img src="assets/img/complete-website-planning.png" alt="The Complete Website Planning Guide: Darryl King"></a>
 				</figure>
-				<h3>The Complete Website Planning Guide</h3>
-				<p>Darryl King</p>
+				<h3 style="color: gold;">The Complete Website Planning Guide</h3>
+				<p class="author"><span>Darryl King</span></p>
 				<a href="https://www.amazon.co.uk/dp/0648053709/ref=nosim?tag=danisoro2001-21" class="btn btn-solid btn-pill"><span>Buy now</span><i class="fas fa-shopping-cart"></i></a>
 			</div>
 
@@ -118,8 +128,8 @@
 				<figure>
 					<a href="https://www.amazon.co.uk/dp/1706664680"><img src="assets/img/making-your-website-work.png" alt="Making Your Website Work: Gill Andrews"></a>
 				</figure>
-				<h3>Making Your Website Work</h3>
-				<p>Gill Andrews</p>
+				<h3 style="color: gold;"> Making Your Website Work</h3>
+				<p class="author"><span>Gill Andrews</span></p>
 				<a href="https://www.amazon.co.uk/dp/1706664680/ref=nosim?tag=danisoro2001-21
 				" class="btn btn-solid btn-pill"><span>Buy now</span><i class="fas fa-shopping-cart"></i></a>
 			</div>
@@ -141,7 +151,8 @@
 
 		<div class="col-3">
 			<a href="#" class="brand">
-				<img src="https://lunevedy.com/ui/assets/img/website-logo-sample.png" alt="Sample website logo" style="width: 200px; height: 40px">
+				<img src="../assets/img/logo.png"
+				 alt=" Website logo" style="width: 200px; height: 40px">
 			</a>
 
 			<h2>ABC Limited</h2>
