--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 			<div class="col-3">
 				<figure class="photos-zoom photos-brightness" style="overflow: hidden;">
-					<a href="portfolio/project-hero/index.html"><img src="assets/img/heroblockimg.svg" alt="Hero block gallery project"></a>
+					<a href="portfolio/project-hero/index-1.html"><img src="assets/img/heroblockimg.svg" alt="Hero block gallery project"></a>
 				</figure>
 				<h3>Hero Block Gallery</h3>
 				<p>A gallery of hero block elements with split-screen layouts and duotone images.</p>
@@ -179,25 +179,25 @@
 
                 <h2>ABC Limited</h2>
                 <p>Our awesome and affordable world-class products and services have been delighting customers since 2001.</p><ul class="footer-icons">		
-<li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-		<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-		<li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-		<li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+<li><a href="https://www.facebook.com/daniel.soro.927"><i class="fa-brands fa-facebook"></i></a></li>
+		<li><a href="https://www.instagram.com/danielsoro2001/"><i class="fa-brands fa-instagram"></i></a></li>
+		
+		
 </ul>
 
                 
-			</div>
+</div>
 
-            <div class="col-3">
-				<h3>Useful Links</h3>
-                <ul class="footer-links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Get in touch</a></li>
-                    <li><a href="#">About us</a></li>
-                    <li><a href="#">Careers</a></li>
-                    <li><a href="privacy.html">Privacy</a></li>
-                </ul>
-			</div>
+<div class="col-3">
+    <h3>Useful Links</h3>
+    <ul class="footer-links">
+        <li><a href="#">Home</a></li>
+        <li><a href="../portfolio/index.html">Portfolio</a></li>
+        <li><a href="../store/index.html">Store</a></li>
+        <li><a href="../contacts/index (1).html">Get in Touch</a></li>
+        <li><a href="privacy.html">Privacy</a></li>
+    </ul>
+</div>
 
             <div class="col-3">
 				<h3>Contact</h3>
