--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/img/favicon-16x16.png">
-    <link rel="manifest" href="../assets/img/site.webmanifest"">
+    <link rel="manifest" href="../assets/img/site.webmanifest">
 
 	<!-- Preload large image -->
 
@@ -104,20 +104,20 @@
 
             <div class="col-3">
 				<figure class="photos-zoom photos-brightness" style="overflow: hidden;">
-					<a href="project-multi-column/index.html"><img src="../assets/img/project-multi-col.png" alt="Placeholder image"></a>
+					<a href="../portfolio/project-multi-column 2/index.html"><img src="../assets/img/project-multi-col.png" alt="Placeholder image"></a>
 				</figure>
 				<h3>Multi-column Layouts</h3>
 				<p>A gallery of multi-column, reponsive layouts.</p>
-				<a href="project-multi-column/index.html" class="btn btn-solid btn-soft"><span>View project</span><i class="fas fa-arrow-right"></i></a>
+				<a href="../portfolio/project-multi-column 2/index.html" class="btn btn-solid btn-soft"><span>View project</span><i class="fas fa-arrow-right"></i></a>
 			</div>
 
 			<div class="col-3">
 				<figure class="photos-zoom photos-brightness" style="overflow: hidden;">
-					<a href="project-hero/index.html"><img src="../assets/img/heroblockimg.svg" alt="Heroblock"></a>
+					<a href="../portfolio/project-hero/index-1.html"><img src="../assets/img/heroblockimg.svg" alt="Heroblock"></a>
 				</figure>
 				<h3>Hero Block Gallery</h3>
 				<p>A gallery of hero block elements with split-screen layouts and duotone images.</p>
-				<a href="project-hero/index.html" class="btn btn-solid btn-soft"><span>View project</span><i class="fas fa-arrow-right"></i></a>
+				<a href="../portfolio/project-hero/index-1.html" class="btn btn-solid btn-soft"><span>View project</span><i class="fas fa-arrow-right"></i></a>
 			</div>
 
 			<div class="col-3">
@@ -149,10 +149,10 @@
 
 			<h2>ABC Limited</h2>
 			<p>Our awesome and affordable world-class products and services have been delighting customers since 2001.</p><ul class="footer-icons">		
-<li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-	<li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-	<li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-	<li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+				<li><a href="https://www.facebook.com/daniel.soro.927"><i class="fa-brands fa-facebook"></i></a></li>
+				<li><a href="https://www.instagram.com/danielsoro2001/"><i class="fa-brands fa-instagram"></i></a></li>
+	
+	
 </ul>
 
 			
@@ -162,9 +162,9 @@
 			<h3>Useful Links</h3>
 			<ul class="footer-links">
 				<li><a href="#">Home</a></li>
-				<li><a href="#">Get in touch</a></li>
-				<li><a href="#">About us</a></li>
-				<li><a href="#">Careers</a></li>
+				<li><a href="../portfolio/index.html">Portfolio</a></li>
+				<li><a href="../store/index.html">Store</a></li>
+				<li><a href="../contacts/index (1).html">Get in Touch</a></li>
 				<li><a href="privacy.html">Privacy</a></li>
 			</ul>
 		</div>
