--- a/contacts/index (1).html
+++ b/contacts/index (1).html
@@ -139,7 +139,7 @@
         <li><a href="../portfolio/index.html">Portfolio</a></li>
         <li><a href="../store/index.html">Store</a></li>
         <li><a href="../contacts/index (1).html">Get in Touch</a></li>
-        <li><a href="privacy.html">Privacy</a></li>
+        <li><a href="../privacy.html">Privacy</a></li>
     </ul>
 </div>
 
