--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
     
             <ul class="links-wrapper">
-                <li><a href='index.html'> Home</a></li>
+                <li><a href="#"> Home</a></li>
                 <li><a href="portfolio/index.html">Portfolio</a></li>
                 <li><a href="store/index.html">Store</a></li>
                 <li><a class="btn btn-solid btn-soft" id="btn-cta" href="contacts/index (1).html"><span>Contact</span> <i class="fa-regular fa-envelope"></i></a></li>
@@ -185,16 +185,15 @@
 		
 </ul>
 
-                
 </div>
 
 <div class="col-3">
     <h3>Useful Links</h3>
     <ul class="footer-links">
         <li><a href="#">Home</a></li>
-        <li><a href="../portfolio/index.html">Portfolio</a></li>
-        <li><a href="../store/index.html">Store</a></li>
-        <li><a href="../contacts/index (1).html">Get in Touch</a></li>
+        <li><a href="portfolio/index.html">Portfolio</a></li>
+        <li><a href="store/index.html">Store</a></li>
+        <li><a href="contacts/index (1).html">Get in Touch</a></li>
         <li><a href="privacy.html">Privacy</a></li>
     </ul>
 </div>
