--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -161,11 +161,11 @@
 		<div class="col-3">
 			<h3>Useful Links</h3>
 			<ul class="footer-links">
-				<li><a href="#">Home</a></li>
+				<li><a href="../index.html">Home</a></li>
 				<li><a href="../portfolio/index.html">Portfolio</a></li>
 				<li><a href="../store/index.html">Store</a></li>
 				<li><a href="../contacts/index (1).html">Get in Touch</a></li>
-				<li><a href="privacy.html">Privacy</a></li>
+				<li><a href="../privacy.html">Privacy</a></li>
 			</ul>
 		</div>
 
