--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Playfair+Display:wght@400;700&family=Quicksand&family=Roboto:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap">
-    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"> 
 
     <!-- Font Awesome 6 icons. Delete if not using. -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -119,7 +118,7 @@
 
 		<div class="col-1 text-center w-820px">
 			<h2>Recent projects</h2>
-			<h3>Below you can see some examples of my recent work. Check out my complete portfolio of</h3>
+			<h3 style ="color: white; padding: 10px;">Below you can see some examples of my recent work. Check out my complete portfolio of</h3>
 		</div>
 
 		<!-- Begin three-column flexbox grid -->
@@ -198,16 +197,15 @@
     </ul>
 </div>
 
-            <div class="col-3">
-				<h3>Contact</h3>
-                <ul class="fa-ul footer-links">
-                    <li><span class="fa-li"><i class="fa-solid fa-location-dot"></i></span> <address>Via San Rocco 23, Vallecrosia<br>Italia. 18019.</address></li>
-                    <li><span class="fa-li"><i class="fa-solid fa-phone"></i></span> <a href="tel:+39 3452208254">+39 3452208254</a></li>
-                    <li><span class="fa-li"><i class="fa-brands fa-whatsapp"></i></span> <a href="https://wa.link/d6cfyb">WhatsApp</a></li>
-                    <li><span class="fa-li"><i class="fa-solid fa-envelope"></i></span> <a href="mailto:danielsoro2001@gmail.com">danielsoro2001@gmail.com</a></li>
-                </ul>
+<div class="col-3">
+    <h3>Contact</h3>
+    <ul class="fa-ul footer-links">
+        <li><span class="fa-li"><i class="fa-solid fa-phone"></i></span> <a href="tel:+39 3452208254">+39 3452208254</a></li>
+        <li><span class="fa-li"><i class="fa-brands fa-whatsapp"></i></span> <a href="https://wa.link/d6cfyb">WhatsApp</a></li>
+        <li><span class="fa-li"><i class="fa-solid fa-envelope"></i></span> <a href="mailto:danielsoro2001@gmail.com">danielsoro2001@gmail.com</a></li>
+    </ul>
 
-			</div>
+</div>
 		</div>
 		<!-- End three-column flexbox grid -->
         <div class="copyright">
