--- a/store/index.html
+++ b/store/index.html
@@ -99,7 +99,7 @@
 
 			<div class="col-4">
 				<figure>
-					<a href="https://www.amazon.co.uk/dp/1925836363"><img src="assets/img/beautiful-web-design.png .png"  alt="The Principles of Beautiful Web Design: Jason Beaird & Alex Walker"></a>
+					<a href="https://www.amazon.co.uk/dp/1925836363/ref=nosim?tag=danisoro2001-21"><img src="assets/img/beautiful-web-design.png .png"  alt="The Principles of Beautiful Web Design: Jason Beaird & Alex Walker"></a>
 				</figure>
 				<h3 style="color: gold;">The Principles of Beautiful Web Design</h3>
 				<p class="author"><span> Jason Beaird &amp; Alex Walker </span></p>
@@ -108,16 +108,16 @@
 
 			<div class="col-4">
 				<figure>
-					<a href="https://www.amazon.co.uk/dp/1849693188"><img src="assets/img/responsive-web-design-frain.jpg" alt="Responsive Web Design with HTML5 and CSS3: Ben Frain"></a>
+					<a href="https://www.amazon.co.uk/dp/1849693188/ref=nosim?tag=danisoro2001-21"><img src="assets/img/responsive-web-design-frain.jpg" alt="Responsive Web Design with HTML5 and CSS3: Ben Frain"></a>
 				</figure>
 				<h3 style="color: gold;"> Responsive Web Design with HTML5 and CSS3</h3>
 				<p class="author"> <span>Ben Frain</span></p>
-				<a href="https://www.amazon.co.uk/dp/1849693188/ref=nosim?tag=danisoro2001-21" class="btn btn-solid btn-pill"><span>Buy now</span><i class="fas fa-shopping-cart"></i></a>
+				<a href="https://www.amazon.co.uk/dp/1849693188/ref=nosim?tag=danisoro2001-21/ref=nosim?tag=danisoro2001-21" class="btn btn-solid btn-pill"><span>Buy now</span><i class="fas fa-shopping-cart"></i></a>
 			</div>
 
 			<div class="col-4">
 				<figure>
-					<a href="https://www.amazon.co.uk/dp/0648053709"><img src="assets/img/complete-website-planning.png" alt="The Complete Website Planning Guide: Darryl King"></a>
+					<a href="https://www.amazon.co.uk/dp/0648053709/ref=nosim?tag=danisoro2001-21"><img src="assets/img/complete-website-planning.png" alt="The Complete Website Planning Guide: Darryl King"></a>
 				</figure>
 				<h3 style="color: gold;">The Complete Website Planning Guide</h3>
 				<p class="author"><span>Darryl King</span></p>
@@ -126,7 +126,7 @@
 
 			<div class="col-4">
 				<figure>
-					<a href="https://www.amazon.co.uk/dp/1706664680"><img src="assets/img/making-your-website-work.png" alt="Making Your Website Work: Gill Andrews"></a>
+					<a href="https://www.amazon.co.uk/dp/1706664680/ref=nosim?tag=danisoro2001-21"><img src="assets/img/making-your-website-work.png" alt="Making Your Website Work: Gill Andrews"></a>
 				</figure>
 				<h3 style="color: gold;"> Making Your Website Work</h3>
 				<p class="author"><span>Gill Andrews</span></p>
@@ -175,16 +175,15 @@
 	</ul>
 </div>
 
-		<div class="col-3">
-			<h3>Contact</h3>
-			<ul class="fa-ul footer-links">
-				<li><span class="fa-li"><i class="fa-solid fa-location-dot"></i></span> <address>Via San Rocco 23, Vallecrosia<br>Italia. 18019.</address></li>
-				<li><span class="fa-li"><i class="fa-solid fa-phone"></i></span> <a href="tel:+39 3452208254">+39 3452208254</a></li>
-				<li><span class="fa-li"><i class="fa-brands fa-whatsapp"></i></span> <a href="https://wa.link/d6cfyb">WhatsApp</a></li>
-				<li><span class="fa-li"><i class="fa-solid fa-envelope"></i></span> <a href="mailto:danielsoro2001@gmail.com">danielsoro2001@gmail.com</a></li>
-			</ul>
+<div class="col-3">
+	<h3>Contact</h3>
+	<ul class="fa-ul footer-links">
+		<li><span class="fa-li"><i class="fa-solid fa-phone"></i></span> <a href="tel:+39 3452208254">+39 3452208254</a></li>
+		<li><span class="fa-li"><i class="fa-brands fa-whatsapp"></i></span> <a href="https://wa.link/d6cfyb">WhatsApp</a></li>
+		<li><span class="fa-li"><i class="fa-solid fa-envelope"></i></span> <a href="mailto:danielsoro2001@gmail.com">danielsoro2001@gmail.com</a></li>
+	</ul>
 
-		</div>
+</div>
 	</div>
 	<!-- End three-column flexbox grid -->
 	<div class="copyright">
