--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <li><a href="#"> Home</a></li>
                 <li><a href="portfolio/index.html">Portfolio</a></li>
                 <li><a href="store/index.html">Store</a></li>
-                <li><a class="btn btn-solid btn-soft" id="btn-cta" href="contacts/index (1).html"><span>Contact</span> <i class="fa-regular fa-envelope"></i></a></li>
+                <li><a class="btn btn-solid btn-soft" id="btn-cta" href="contacts/index.html"><span>Contact</span> <i class="fa-regular fa-envelope"></i></a></li>
             </ul>
         </div></div></nav>
     
@@ -93,7 +93,7 @@
 				
 
         <div class="container-btn">
-            <a href="#" class="btn btn-solid"><span>Order now</span></a><a href="#" class="btn btn-outline"><span>View details</span><i class="fas fa-arrow-right"></i></a>
+            <a href="store/index.html" class="btn btn-solid"><span>Store</span></a><a href="portfolio/index.html" class="btn btn-outline"><span>Portfolio</span><i class="fas fa-arrow-right"></i></a>
         </div>
 
     </div>
@@ -192,7 +192,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="portfolio/index.html">Portfolio</a></li>
         <li><a href="store/index.html">Store</a></li>
-        <li><a href="contacts/index (1).html">Get in Touch</a></li>
+        <li><a href="contacts/index.html">Get in Touch</a></li>
         <li><a href="privacy.html">Privacy</a></li>
     </ul>
 </div>
