--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -46,7 +46,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../portfolio/index.html">Portfolio</a></li>
                 <li><a href="../store/index.html">Store</a></li>
-                <li><a class='btn btn-solid btn-soft' href="../contacts/index (1).html"
+                <li><a class='btn btn-solid btn-soft' href="../contacts/index.html"
 					id='btn-cta'> <span>contact</span> <i class="fa-regular fa-envelope"> </i></a></li>
 				</ul>
             </ul>
@@ -164,7 +164,7 @@
 				<li><a href="../index.html">Home</a></li>
 				<li><a href="../portfolio/index.html">Portfolio</a></li>
 				<li><a href="../store/index.html">Store</a></li>
-				<li><a href="../contacts/index (1).html">Get in Touch</a></li>
+				<li><a href="../contacts/index.html">Get in Touch</a></li>
 				<li><a href="../privacy.html">Privacy</a></li>
 			</ul>
 		</div>
