--- a/store/index.html
+++ b/store/index.html
@@ -72,7 +72,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../portfolio/index.html">Portfolio</a></li>
                 <li><a href="../store/index.html">Store</a></li>
-                <li><a class="btn btn-solid btn-soft" id="btn-cta" href="../contacts/index (1).html"><span>Contact</span> <i class="fa-regular fa-envelope"></i></a></li>
+                <li><a class="btn btn-solid btn-soft" id="btn-cta" href="../contacts/index.html"><span>Contact</span> <i class="fa-regular fa-envelope"></i></a></li>
             </ul>
             </div>
         </div>
@@ -170,7 +170,7 @@
 		<li><a href="#">Home</a></li>
 		<li><a href="../portfolio/index.html">Portfolio</a></li>
 		<li><a href="../store/index.html">Store</a></li>
-		<li><a href="../contacts/index (1).html">Get in Touch</a></li>
+		<li><a href="../contacts/index.html">Get in Touch</a></li>
 		<li><a href="../privacy.html">Privacy</a></li>
 	</ul>
 </div>
